--- a/app/views/staff/top/index.html.erb
+++ b/app/views/staff/top/index.html.erb
@@ -9,6 +9,10 @@
   </div>
   <ol class="NewsList">
     <li class="NewsList__item">
+      <time class="NewsList__head" datatime="2017-2-7">2017.2.7</time>
+      <span class="NewsList__body">顧客電話番号管理機能を追加</span>
+    </li>
+    <li class="NewsList__item">
       <time class="NewsList__head" datatime="2017-2-4">2017.2.4</time>
       <span class="NewsList__body">顧客管理機能を追加</span>
     </li>
