検索フォームの表示 #16

--- a/app/assets/stylesheets/components/_appForm.scss
+++ b/app/assets/stylesheets/components/_appForm.scss
@@ -46,4 +46,14 @@
   &__input-block {
     input { margin-right: $narrow * 2; }
   }
+  &__search {
+    padding: $wide;
+    border: solid $dark_gray 1px;
+    background-color: $very_light_gray;
+    div {
+      display: inline-block;
+      margin-right: $moderate $very_wide $moderate 0;
+      label { margin-right: $moderate }
+    }
+  }
 }
