--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -47,6 +47,11 @@ $very_dark_cyan: darken($dark_cyan, 25%);
 $dark_magenta: #884488;
 $very_dark_magenta: darken($dark_magenta, 25%);
 
+/* イエロー系 */
+
+$dark_yellow: #888844;
+$very_dark_yellow: darken($dark_yellow, 25%);
+
 /* 赤系 */
 $red: #cc0000;
 $pink: #ffcccc;
