--- a/app/views/customer/shared/_footer_login.html.erb
+++ b/app/views/customer/shared/_footer_login.html.erb
@@ -1,7 +1,7 @@
-<footer class="Footer Admin__footer">
+<footer class="Footer Customer__footer">
   <div class="l-row l-column">
     <div class="Footer__head">
-      <%= link_to('BAUKIS KAI', admin_root_url, class:'logo') %>
+      <%= link_to('BAUKIS KAI', customer_root_url, class:'logo') %>
       <ul class="Menu Menu--sub">
         <li><a href="#" class="Menu__item"></a></li>
       </ul>
