--- a/app/views/customer/shared/_header.html.erb
+++ b/app/views/customer/shared/_header.html.erb
@@ -12,6 +12,7 @@
       <li class="Menu__item"><a href="#">About</a></li>
       <li class="Menu__item"><%= link_to('Blog', customer_article_index_url) %></li>
       <li class="Menu__item"><a href="#">Contact</a></li>
+      <li class="Menu__item"><%= link_to('Login', customer_login_url) %></li>
     </ul>
   </nav>
 </header>
