--- a/app/views/customer/shared/_footer.html.erb
+++ b/app/views/customer/shared/_footer.html.erb
@@ -1,13 +1,14 @@
 <footer class="Footer">
   <div class="l-row l-column">
     <div class="Footer__head">
-      <%= link_to('BAUKIS KAI', staff_root_url, class:'logo') %>
+      <%= link_to('BAUKIS KAI', customer_root_url, class:'logo') %>
       <ul class="Menu Menu--sub">
         <li><a href="#" class="Menu__item">Services</a></li>
         <li><a href="#" class="Menu__item">Work</a></li>
         <li><a href="#" class="Menu__item">About us</a></li>
         <li><%= link_to('Blog', customer_article_index_url,class:"Menu__item") %></li>
         <li><a href="#" class="Menu__item">Contact</a></li>
+        <li><%= link_to('Login', customer_login_url,class:"Menu__item") %></li>
       </ul>
     </div>
     <div class="Footer__body">
