サービスオブジェクト #29

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -97,6 +97,7 @@
 @import "pages/customer/index";
 @import "pages/customer/campaign";
 @import "pages/customer/article";
+@import "pages/customer";
 
 // Staff
 @import "pages/staff";
