許可IPアドレスの一覧表示 #28

--- a/app/views/admin/top/dashboard.html.erb
+++ b/app/views/admin/top/dashboard.html.erb
@@ -7,5 +7,6 @@
   <ul class="DashBoard__menu">
     <li><%= link_to t('.admin_staff_members'), :admin_staff_members, class: 'btn btn-default' %></li>
     <li><%= link_to t('.admin_staff_events'), :admin_staff_events, class: 'btn btn-default' %></li>
+    <li><%= link_to t('.allowed_sources'), :admin_allowed_sources, class: 'btn btn-default' %></li>
   </ul>
 </section>
