許可IPアドレスの一括削除フォーム #28

--- a/app/views/admin/allowed_sources/_new_allowed_source.html.erb
+++ b/app/views/admin/allowed_sources/_new_allowed_source.html.erb
@@ -5,6 +5,6 @@
   <%= f.text_field(:octet2, size:3, hide_label:true) %>
   <%= f.text_field(:octet3, size:3, hide_label:true) %>
   <%= f.text_field(:last_octet, size:3, hide_label:true) %>
-  <%= f.submit t('admin.allowed_sources.index.submit'), inline: true %>
+  <%= f.submit t('admin.allowed_sources.new_allowed_source.submit'), inline: true %>
 </div>
 <% end %>
