--- a/app/views/admin/allowed_sources/index.html.erb
+++ b/app/views/admin/allowed_sources/index.html.erb
@@ -6,22 +6,32 @@
 <section class="Section l-column AppForm">
   <div class="AppForm__generic-form AdminAppForm__generic-form AppForm__customer_form">
     <%= render 'new_allowed_source' %>
+
+    <%= bootstrap_form_for :form, url: :delete_admin_allowed_sources, method: :delete do |f| %>
+        <table class="Table__body Table__body--listing AdminTable__body">
+          <tr class="Table__tr">
+            <th class="Table__th"><%= t('.delete') %></th>
+            <th class="Table__th"><%= t('.ip_address') %></th>
+            <th class="Table__th"><%= t('.created_at') %></th>
+          </tr>
+          <% @allowed_sources.each_with_index do |s, index| %>
+              <% p = Admin::AllowedSourcePresenter.new(s, self) %>
+              <%= f.fields_for :@allowed_sources, s, index: index do |ff| %>
+                  <%= ff.hidden_field :id %>
+                  <tr  class="Table__tr">
+                    <td class="Table__td Table__td--action Table__td--center"><%= ff.check_box :_destroy ,label:''%></td>
+                    <td class="Table__td Table__td--ip Table__td--center"><%= p.ip_address %></td>
+                    <td class="Table__td Table__td--date Table__td--center"><%= p.created_at %></td>
+                  </tr>
+              <% end %>
+          <% end %>
+        </table>
+        <div>
+          <%= f.submit t('.submit'),
+                       data: { confirmed: t('.confirm')}
+          %>
+        </div>
+    <% end %>
   </div>
 </section>
 
-
-<section class="Section l-column Table">
-  <table class="Table__body Table__body--listing AdminTable__body">
-    <tr class="Table__tr">
-      <th class="Table__th"><%= t('.ip_address') %></th>
-      <th class="Table__th"><%= t('.created_at') %></th>
-    </tr>
-    <% @allowed_sources.each do |s| %>
-        <% p = Admin::AllowedSourcePresenter.new(s, self) %>
-        <tr  class="Table__tr">
-          <td class="Table__td Table__td--ip Table__td--center"><%= p.ip_address %></td>
-          <td class="Table__td Table__td--date Table__td--center"><%= p.created_at %></td>
-        </tr>
-    <% end %>
-  </table>
-</section>
