許可IPアドレスの管理 #28

--- a/app/views/admin/top/index.html.erb
+++ b/app/views/admin/top/index.html.erb
@@ -9,6 +9,10 @@
   </div>
   <ol class="NewsList">
     <li class="NewsList__item">
+      <time class="NewsList__head" datatime="2017-2-13">2017.2.13</time>
+      <span class="NewsList__body">IPアクセス制限機能追加</span>
+    </li>
+    <li class="NewsList__item">
       <time class="NewsList__head" datatime="2017-2-2">2017.2.2</time>
       <span class="NewsList__body">データピッカー機能追加</span>
     </li>
