プログラムの詳細表示  #27

--- a/app/assets/stylesheets/components/common/_table.scss
+++ b/app/assets/stylesheets/components/common/_table.scss
@@ -27,6 +27,12 @@
       th { padding-right: $moderate; width: 200px }
       td { background-color: $very_light_gray }
     }
+
+    &--description {
+      margin: $wide;
+      padding: $wide;
+      background-color: $very_light_gray;
+    }
   }
 
   &__th {
