バリデーション #26

--- a/app/assets/stylesheets/components/_appForm.scss
+++ b/app/assets/stylesheets/components/_appForm.scss
@@ -56,4 +56,8 @@
       label { margin-right: $moderate }
     }
   }
+  &--with-errors {
+    label { color: $red }
+    input, select { background-color: $pink }
+  }
 }
