多数のオブジェクトを一括編集するフォーム #26

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -75,6 +75,7 @@
 @import "./components/appForm";
 @import "./components/adminAppForm";
 @import "./components/staffAppForm";
+@import "./components/appEntryForm";
 
 // テーブル
 @import "./components/adminTable";
