--- a/app/views/staff/programs/show.html.erb
+++ b/app/views/staff/programs/show.html.erb
@@ -16,4 +16,6 @@
   </table>
 
   <div class="Table__body--description"><%= @program.description %></div>
+
+  <%= render 'entries_form' if @program.number_of_applicants > 0 %>
 </section>
