--- a/app/views/staff/programs/_entries_form.html.erb
+++ b/app/views/staff/programs/_entries_form.html.erb
@@ -18,16 +18,18 @@
     <% cols.times do |j| %>
         <% index = i * cols + j %>
         <% e = entries[index] || break %>
-        <%= markup(:div, class: 'AppEntryForm__body') do |m|
+        <%= markup(:div) do |m|
           m.th index + 1
           m.td e.customer.family_name + ' ' + e.customer.given_name
           m.td do
-            attributes = { type: 'checkbox' }
+            attributes = { type: 'checkbox', class: 'isApproved' }
+            attributes['data-entry-id'] = e.id
             attributes[:checked] = 'checked' if e.approved?
             m.input attributes
           end
           m.td do
-            attributes = { type: 'checkbox' }
+            attributes = { type: 'checkbox', class: 'isCanceled' }
+            attributes['data-entry-id'] = e.id
             attributes[:checked] = 'checked' if e.canceled?
             m.input attributes
           end
@@ -36,3 +38,13 @@
   </tr>
   <% end %>
 </table>
+
+<div class="AppEntryForm--button-wrapper">
+  <%= bootstrap_form_for Staff::EntriesForm.new(program: @program), as: 'form', url: [ :entries, :staff, @program ], html: { method: :patch } do |f| %>
+      <%= f.hidden_field :approved %>
+      <%= f.hidden_field :not_approved %>
+      <%= f.hidden_field :canceled %>
+      <%= f.hidden_field :not_canceled %>
+      <%= button_tag t('staff.programs.entries_form.update'), type: 'button', id: 'update-entries-button', class: 'btn btn-default' %>
+  <% end %>
+</div>
