顧客トップページの修正 #25

--- a/app/views/customer/top/dashboard.html.erb
+++ b/app/views/customer/top/dashboard.html.erb
@@ -14,3 +14,9 @@
     </li>
   </ol>
 </section>
+
+<section class="Section l-column DashBoard">
+  <ul class="DashBoard__menu">
+    <li><%= link_to t('.customer_programs'), :customer_programs, class: 'btn btn-default' %></li>
+  </ul>
+</section>
