プログラムの一覧と詳細 #25

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -80,6 +80,7 @@
 // テーブル
 @import "./components/adminTable";
 @import "./components/staffTable";
+@import "./components/customerTable";
 
 //font-awesome
 @import "font-awesome";
