--- a/app/views/customer/programs/show.html.erb
+++ b/app/views/customer/programs/show.html.erb
@@ -14,4 +14,6 @@
   </table>
 
   <div class="Table__body--description"><%= @program.description %></div>
+
+  <div><%= p.apply_or_cancel_button %></div>
 </section>
