--- a/app/views/customer/accounts/edit.html.erb
+++ b/app/views/customer/accounts/edit.html.erb
@@ -5,10 +5,10 @@
 
 <section class="Section l-column AppForm">
   <div class="AppForm__generic-form CustomerAppForm__generic-form AppForm__customer-form">
-    <%= bootstrap_form_for @customer_form, as: 'form', url: :customer_account do |f| %>
+    <%= bootstrap_form_for @customer_form, as: 'form', url: :confirm_customer_account do |f| %>
         <%= render 'form', f: f %>
         <div class="AppForm__buttons">
-          <%= f.submit t('.update'),class: 'btn btn-default btn-lg' %>
+          <%= f.submit t('.confirm'),class: 'btn btn-default btn-lg' %>
           <%= link_to t('.cancel'), :customer_account,class: 'btn btn-default btn-lg' %>
         </div>
     <% end %>
