--- a/app/views/customer/accounts/_home_address_fields.html.erb
+++ b/app/views/customer/accounts/_home_address_fields.html.erb
@@ -1,6 +1,6 @@
 <%= f.fields_for :home_address, f.object.customer.home_address do |ff| %>
 <%= markup do |m|
-  p = Staff::AddressFormPresenter.new(ff,self)
+  p = confirming ? Customer::ConfirmingAddressFormPresenter.new(ff, self) : Staff::AddressFormPresenter.new(ff, self)
   p.with_options(required: true) do |q|
     m << q.postal_code_block(:postal_code, t('activerecord.attributes.home_address.postal_code'), size: 7)
     m << q.drop_down_list_block(:prefecture, t('activerecord.attributes.home_address.prefecture'),Address::PREFECTURE_NAMES)
@@ -11,9 +11,13 @@
   m.div(class: 'FormApp__input-block') do
     m.ol do
       p.object.phones.each_with_index do |phone, index|
-        m << render('phone_fields', f: ff, phone: phone, index: index)
+        if confirming
+          m << render('confirming_phone_fields', f: ff, phone: phone, index: index)
+        else
+          m << render('phone_fields', f: ff, phone: phone, index: index)
         end
       end
     end
+  end
 end %>
 <% end %>
