--- a/app/assets/stylesheets/components/_appForm.scss
+++ b/app/assets/stylesheets/components/_appForm.scss
@@ -63,4 +63,5 @@
   &--field-value { margin-left: $wide; font-weight: bold;}
   &--readonly { color: $dark_gray; }
   &--field-value { font-weight: bold; }
+  &--isConfirmed {}
 }
