フォームの確認画面  #24

--- a/app/views/customer/top/dashboard.html.erb
+++ b/app/views/customer/top/dashboard.html.erb
@@ -10,6 +10,10 @@
   <ol class="NewsList">
     <li class="NewsList__item">
       <time class="NewsList__head" datatime="2017-3-17">2017.3.17</time>
+      <span class="NewsList__body">顧客自身によるアカウント管理機能追加</span>
+    </li>
+    <li class="NewsList__item">
+      <time class="NewsList__head" datatime="2017-3-17">2017.3.17</time>
       <span class="NewsList__body">プログラム申し込み機能追加</span>
     </li>
     <li class="NewsList__item">
