--- a/app/views/staff/top/index.html.erb
+++ b/app/views/staff/top/index.html.erb
@@ -9,6 +9,10 @@
   </div>
   <ol class="NewsList">
     <li class="NewsList__item">
+      <time class="NewsList__head" datatime="2017-3-17">2017.3.17</time>
+      <span class="NewsList__body">アカウント情報編集機能を改善</span>
+    </li>
+    <li class="NewsList__item">
       <time class="NewsList__head" datatime="2017-2-16">2017.2.16</time>
       <span class="NewsList__body">プログラム管理機能を追加</span>
     </li>
