--- a/app/views/customer/top/dashboard.html.erb
+++ b/app/views/customer/top/dashboard.html.erb
@@ -9,6 +9,10 @@
   </div>
   <ol class="NewsList">
     <li class="NewsList__item">
+      <time class="NewsList__head" datatime="2017-3-18">2017.3.18</time>
+      <span class="NewsList__body">問い合わせ機能追加</span>
+    </li>
+    <li class="NewsList__item">
       <time class="NewsList__head" datatime="2017-3-17">2017.3.17</time>
       <span class="NewsList__body">顧客自身によるアカウント管理機能追加</span>
     </li>
