--- a/app/views/staff/top/dashboard.html.erb
+++ b/app/views/staff/top/dashboard.html.erb
@@ -7,5 +7,13 @@
   <ul class="DashBoard__menu">
     <li><%= link_to t('.staff_customers'), :staff_customers, class: 'btn btn-default' %></li>
     <li><%= link_to t('.staff_programs'), :staff_programs, class: 'btn btn-default' %></li>
+    <li><%= t('.messages') %>
+      <ul>
+        <li><%= link_to t('.inbound_staff_messages'), :inbound_staff_messages, class: 'btn btn-default' %></li>
+        <li><%= link_to t('.outbound_staff_messages'), :outbound_staff_messages, class: 'btn btn-default' %></li>
+        <li><%= link_to t('.staff_messages'), :staff_messages, class: 'btn btn-default' %></li>
+        <li><%= link_to t('.deleted_staff_messages'), :deleted_staff_messages, class: 'btn btn-default' %></li>
+      </ul>
+    </li>
   </ul>
 </section>
