メッセージツリーの表示 #22

--- a/app/views/staff/messages/show.html.erb
+++ b/app/views/staff/messages/show.html.erb
@@ -13,5 +13,6 @@
     <tr class="Table__tr"><th class="Table__th"><%= t('.created_at') %></th><td class="Table__td--date"><%= p.created_at %></td></tr>
   </table>
 
+  <div class="tree"><%= p.tree %></div>
   <div class="Table__body--description"><%= p.formatted_body %></div>
 </section>
