ツリー構造 #22

--- a/app/views/staff/top/index.html.erb
+++ b/app/views/staff/top/index.html.erb
@@ -10,6 +10,10 @@
   <ol class="NewsList">
     <li class="NewsList__item">
       <time class="NewsList__head" datatime="2017-3-18">2017.3.18</time>
+      <span class="NewsList__body">問い合わせの一覧表示と削除機能を追加</span>
+    </li>
+    <li class="NewsList__item">
+      <time class="NewsList__head" datatime="2017-3-18">2017.3.18</time>
       <span class="NewsList__body">問い合わせ到着の通知機能を追加</span>
     </li>
     <li class="NewsList__item">
