Tag-itのインストール #21

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -93,6 +93,8 @@
 
 //jQuery
 @import "jquery-ui/datepicker";
+@import "jquery-ui";
+@import "jquery.tagit";
 // ===========================
 // Pages
 // ===========================
