タグの追加・削除 #21

--- a/app/assets/javascripts/staff/paths.coffee.erb
+++ b/app/assets/javascripts/staff/paths.coffee.erb
@@ -1,2 +1,3 @@
 window.paths = new Object
 window.paths.number_of_unprocessed_messages = "<%= count_staff_messages_path %>"
+window.paths.staff_root = "<%= staff_root_path.sub(%r{/\z}, '') %>"
