indexアクションの変更 #21

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -83,6 +83,9 @@
 @import "./components/staffTable";
 @import "./components/customerTable";
 
+// タグ
+@import "./components/tags";
+
 //font-awesome
 @import "font-awesome";
 
