リンクの設置 #21

--- a/app/views/staff/messages/index.html.erb
+++ b/app/views/staff/messages/index.html.erb
@@ -11,6 +11,7 @@
 </section>
 
 <section class="Section l-column Table">
+  <%= render 'links'%>
   <%= paginate @messages %>
 
   <table class="Table__body Table__body--listing StaffTable__body">
