--- a/app/views/customer/top/dashboard.html.erb
+++ b/app/views/customer/top/dashboard.html.erb
@@ -30,5 +30,6 @@
 <section class="Section l-column DashBoard">
   <ul class="DashBoard__menu">
     <li><%= link_to t('.customer_programs'), :customer_programs, class: 'btn btn-default' %></li>
+    <li><%= link_to t('.customer_messages'), :customer_messages, class: 'btn btn-default' %></li>
   </ul>
 </section>
