--- a/app/views/staff/messages/show.html.erb
+++ b/app/views/staff/messages/show.html.erb
@@ -11,7 +11,7 @@
           <%= link_to t('.reply'), new_staff_message_reply_path(@message), class:'btn btn-default' %>
         </div>
     <% end %>
-    <% p = Staff::MessagePresenter.new(@message, self) %>
+    <% p = MessagePresenter.new(@message, self) %>
     <tr class="Table__tr"><th class="Table__th"><%= t('.type') %></th><td><%= p.type %></td></tr>
     <tr class="Table__tr"><th class="Table__th"><%= t('.sender') %></th><td><%= p.sender %></td></tr>
     <tr class="Table__tr"><th class="Table__th"><%= t('.receiver') %></th><td><%= p.receiver %></td></tr>
