--- a/app/views/customer/messages/index.html.erb
+++ b/app/views/customer/messages/index.html.erb
@@ -1,15 +1,16 @@
 <section class="Section">
-  <h1 class="Staff__title"><%= @title %></h1>
+  <h1 class="Customer__title"><%= @title %></h1>
 </section>
 
 <section class="Section l-column Table">
   <%= paginate @messages %>
 
-  <table class="Table__body Table__body--listing StaffTable__body">
+  <table class="Table__body Table__body--listing CustomerTable__body">
     <tr class="Table__tr">
       <th class="Table__th"><%= t('customer.messages.index.sender') %></th>
       <th class="Table__th"><%= t('customer.messages.index.subject') %></th>
       <th class="Table__th"><%= t('customer.messages.index.created_at') %></th>
+      <th class="Table__th"><%= t('customer.messages.index.action') %></th>
     </tr>
     <% @messages.each do |m| %>
         <% p = MessagePresenter.new(m, self) %>
@@ -17,6 +18,9 @@
           <td class="Table__td"><%= p.sender %></td>
           <td class="Table__td"><%= p.truncated_subject %></td>
           <td class="Table__td--date"><%= p.created_at %></td>
+          <td class="Table__td--action">
+            <%= link_to t('customer.messages.index.detail'), customer_message_path(m), class: 'btn btn-default btn-xs' %>
+          </td>
         </tr>
     <% end %>
   </table>
