--- a/app/views/staff/replies/_message.erb
+++ b/app/views/staff/replies/_message.erb
@@ -1,7 +1,7 @@
-<% p = Staff::MessagePresenter.new(@message, self) %>
+<% p = MessagePresenter.new(@message, self) %>
 <section class="Section l-column Table StaffTable">
   <table class="Table__body Table__body--attributes StaffTable__body">
-    <% p = Staff::MessagePresenter.new(@message, self) %>
+    <% p = MessagePresenter.new(@message, self) %>
     <tr class="Table__tr"><th class="Table__th"><%= t('staff.replies.new.sender') %></th><td><%= p.sender %></td></tr>
     <tr class="Table__tr"><th class="Table__th"><%= t('staff.replies.new.subject') %></th><td><%= p.subject %></td></tr>
     <tr class="Table__tr"><th class="Table__th"><%= t('staff.replies.new.created_at') %></th><td class="Table__td--date"><%= p.created_at %></td></tr>
