--- a/app/views/customer/messages/show.html.erb
+++ b/app/views/customer/messages/show.html.erb
@@ -3,6 +3,9 @@
 </section>
 
 <section class="Section l-column Table CustomerTable">
+  <div class="Table__links">
+    <%= link_to t('.reply'), new_customer_message_reply_path(@message), class:'btn btn-default' %>
+  </div>
   <table class="Table__body Table__body--attributes CustomerTable__body">
     <% p = MessagePresenter.new(@message, self) %>
     <tr class="Table__tr"><th class="Table__th"><%= t('.sender') %></th><td><%= p.sender %></td></tr>
