--- a/app/views/staff/top/index.html.erb
+++ b/app/views/staff/top/index.html.erb
@@ -9,6 +9,10 @@
   </div>
   <ol class="NewsList">
     <li class="NewsList__item">
+      <time class="NewsList__head" datatime="2025-6-6">2025.6.8</time>
+      <span class="NewsList__body">アプリケーションをバージョンアップ</span>
+    </li>
+    <li class="NewsList__item">
       <time class="NewsList__head" datatime="2017-3-28">2017.3.28</time>
       <span class="NewsList__body">問い合わせ返信機能を追加</span>
     </li>
